...
                // Gallery Grid
                LazyVerticalGrid(
                    columns = if (state.isGridView) GridCells.Adaptive(104.dp) else GridCells.Fixed(1),
                    state = gridState,
                    modifier = Modifier
                        .weight(1f)
                        .testTag("cloud-gallery"),
                    contentPadding = PaddingValues(
                        start = 3.dp,
                        end = 3.dp,
                        top = 4.dp,
                        bottom = if (state.selectedIds.isNotEmpty()) 16.dp else 80.dp
                    ),
...
